[chromium] CCThreadProxy::finishAllRendering hangs if !visible https://bugs.webkit.org/show_bug.cgi?id=71920

Patch by Iain Merrick <husky@google.com> on 2011-11-11
Reviewed by James Robinson.

Source/WebCore:

* platform/graphics/chromium/cc/CCScheduler.cpp:
(WebCore::CCScheduler::setNeedsForcedRedraw):
* platform/graphics/chromium/cc/CCScheduler.h:
* platform/graphics/chromium/cc/CCSchedulerStateMachine.cpp:
(WebCore::CCSchedulerStateMachine::CCSchedulerStateMachine):
(WebCore::CCSchedulerStateMachine::nextAction):
(WebCore::CCSchedulerStateMachine::updateState):
(WebCore::CCSchedulerStateMachine::setNeedsForcedRedraw):
* platform/graphics/chromium/cc/CCSchedulerStateMachine.h:
* platform/graphics/chromium/cc/CCThreadProxy.cpp:
(WebCore::CCThreadProxy::requestReadbackOnImplThread):
(WebCore::CCThreadProxy::finishAllRenderingOnImplThread):

Source/WebKit/chromium:

* tests/CCSchedulerStateMachineTest.cpp:
(WebCore::TEST):

Canonical link: https://commits.webkit.org/88611@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100054 268f45cc-cd09-0410-ab3c-d52691b4dbfc